--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.0.0",
   "description": "An attempt at making a spellchecker's brain",
   "main": "lib/src/index.js",
+  "typings": "lib/src/index.d.ts",
   "private": true,
   "scripts": {
-    "build": "npm install && npm run :compile",
+    "build": "npm install && npm run :build",
     "test": "ava",
     "watch": "run-p watch:*",
     "watch:build": "run-s \":compile -- --watch\"",
     "watch:test": "ava --watch",
-    ":compile": "tsc -b src test"
+    ":build": "npm-run-all -p :compile :copy:resources -s test",
+    ":compile": "tsc -b src test",
+    ":copy:resources": "cpy ./resources/words ./lib/resources"
   },
   "author": "greyepoxy",
   "license": "MIT",
@@ -18,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^12.0.10",
     "ava": "^2.1.0",
+    "cpy-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "tslint": "^5.18.0",
