--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "watch": "run-p watch:*",
     "watch:build": "run-s \":compile -- --watch\"",
     "watch:test": "ava --watch",
-    ":build": "npm-run-all -p :compile :copy:resources -s test",
+    ":build": "npm-run-all :clean -p :compile :copy:resources -s test",
+    ":clean": "rimraf ./lib",
     ":compile": "tsc -b src test",
     ":copy:resources": "cpy ./resources/words ./lib/resources"
   },
@@ -24,6 +25,7 @@
     "cpy-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
+    "rimraf": "^2.6.3",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
