--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/src/index.js",
   "typings": "lib/src/index.d.ts",
   "private": true,
+  "repository": {"type": "git", "url": "https://github.com/greyepoxy/Spell-checker.git"},
   "scripts": {
     "build": "npm install && npm run :build",
     "test": "ava",
